# puma-pay-campus-wallet

./: .env  .env.example  .gitattributes  .gitignore  ALTERNATIVAS_PORTAL.md  AUTHENTICATION_STATUS.md  CHECKPOINT_RESPONSE.md  PORTAL_SETUP.md  PumaPay.java  README.md  RESET_APP.md  SISTEMA_CATEGORIAS.md  bun.lockb  close_issues.sh  index.html  package-lock.json  package.json  tailwind.config.ts
api/: _utils.js  account-details.js  balance.js  bank-accounts.js  create-clabe.js  health.js  mock-deposit.js  redeem.js  register-bank.js  transactions.js  webhook-juno.js  withdrawal.js
backend/: .gitignore  DEPLOY_DASHBOARD.md  DEPLOY_QUICK.md  DEPLOY_VERCEL.md  NGROK_SETUP.md  QUICK_START.md  README.md  bitso-webhook.js  config.example.js  index.js  package-lock.json  package.json  start-with-ngrok.js  vercel.json
contracts/: Cargo.toml  DEPLOY_STELLAR.md
contracts/savings-goals/: Cargo.toml  DEPLOYMENT_STATUS.md  INTEGRATION_GUIDE.md  README.md
contracts/savings-goals/src/: lib.rs
contracts/simple-verifier/: Cargo.toml  README.md
contracts/simple-verifier/src/: lib.rs
contracts/user-levels/: Cargo.toml
contracts/user-levels/src/: lib.rs
docs/: BALANCE_AND_ZK_DISPLAY.md  CIRCUITS_OVERVIEW.md  COMO_FUNCIONAN_LAS_TRANSFERENCIAS.md  CONTRACTS_IMPLEMENTATION_SUMMARY.md  COURSES_GAMIFICATION_PLAN.md  EXPLICACION_PROVER_VERIFIER.md  FRONTEND_IMPLEMENTATION_STATUS.md  HOW_TO_USE_NARGO_PROVE.md  HOW_TO_VERIFY_REAL_PROOF.md  IMPLEMENTATION_COMPLETE.md  ISSUES_STATUS.md  LEAN_CANVAS_Y_PITCH.md  PLAN_IMPLEMENTACION_ESTUDIANTES.md  PUNTOS_IMPLEMENTACION.md  SEGURIDAD.md  (+13 more)
(+135 files in other folders)
